feat(output): use JSON stdout instead of exit 2
Claude Code conflates exit-code-2 hook blocks with user
permission denials, causing stop-and-wait behavior instead
of self-correction. Using systemMessage alone means Claude
only sees a generic "Hook denied this tool" and never gets
the actual error or fix hint.

Switches to structured JSON on stdout with permissionDecision,
permissionDecisionReason, additionalContext, and systemMessage
fields. Always exits 0. Only exit 3 (crash) remains non-zero.

Adds new hookresponse package that builds the JSON response.
Bypassed exceptions now use permissionDecision "allow" with
additionalContext instead of the old block then convert flow.
Removes FormatErrors and related formatting functions from
the dispatcher package, replaced by hookresponse formatters.

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/docs/errors/GIT001.md
+++ b/docs/errors/GIT001.md
@@ -36,6 +36,19 @@ Or disable entirely:
 required_flags = []
 ```
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT001] Git commit is missing the -s (signoff) flag. Add -s flag: git commit -sS -m "message"`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT002](GIT002.md) - Missing GPG Sign Flag
