--- a/docs/errors/GIT002.md
+++ b/docs/errors/GIT002.md
@@ -46,6 +46,19 @@ Disable this check in `config.toml`:
 required_flags = ["-s"]  # Only require signoff, not GPG signing
 ```
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT002] Git commit is missing the -S (GPG sign) flag. Add -S flag: git commit -sS -m "message"`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT001](GIT001.md) - Missing signoff flag
