--- a/docs/errors/GIT004.md
+++ b/docs/errors/GIT004.md
@@ -45,6 +45,19 @@ Allow unlimited length for revert commits:
 allow_unlimited_revert_title = true  # Default: true
 ```
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT004] Commit message title exceeds 50 characters. Use format: type(scope): description (max 50 chars)`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT005](GIT005.md) - Commit Message Body Issues
