--- a/docs/errors/GIT005.md
+++ b/docs/errors/GIT005.md
@@ -46,6 +46,19 @@ These lines are exempt from length limits:
 - Code blocks (indented with 4+ spaces)
 - Trailers (like `Signed-off-by:`)
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT005] Commit message body line exceeds 72 characters. Wrap body lines at 72 characters`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT004](GIT004.md) - Commit Message Title Issues
