--- a/docs/errors/GIT006.md
+++ b/docs/errors/GIT006.md
@@ -42,6 +42,19 @@ Disable this check in `config.toml`:
 block_infra_scope_misuse = false
 ```
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT006] Using feat(ci) or fix(ci) with infrastructure scope. Use ci(...) instead of feat(ci) or fix(ci)`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT013](GIT013.md) - Conventional Commit Format
