--- a/docs/errors/GIT008.md
+++ b/docs/errors/GIT008.md
@@ -33,6 +33,19 @@ git push
 git branch -vv
 ```
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT008] No branch specified for git push and no upstream tracking configured. Specify branch: git push <remote> <branch>`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT007](GIT007.md) - Remote does not exist
