--- a/docs/errors/GIT009.md
+++ b/docs/errors/GIT009.md
@@ -30,6 +30,19 @@ This usually means a typo in the path, or the file was deleted or moved.
    git add -u  # Stages all modifications and deletions
    ```
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT009] File "path/to/file.go" does not exist. Verify the file exists before adding`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT003](GIT003.md) - No files staged for commit
