--- a/docs/errors/GIT010.md
+++ b/docs/errors/GIT010.md
@@ -45,6 +45,19 @@ Disable flag requirements:
 required_flags = []
 ```
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT010] Git commit is missing required flags (-s, -S). Add -sS flags: git commit -sS -m "message"`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT001](GIT001.md) - Missing signoff flag
