--- a/docs/errors/GIT011.md
+++ b/docs/errors/GIT011.md
@@ -33,6 +33,19 @@ Disable this check in `config.toml`:
 block_pr_references = false
 ```
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT011] Commit message contains a PR reference (#123). Remove PR reference from commit message (use in PR body instead)`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT012](GIT012.md) - Claude Attribution
