--- a/docs/errors/GIT012.md
+++ b/docs/errors/GIT012.md
@@ -31,6 +31,19 @@ Disable this check in `config.toml`:
 block_ai_attribution = false
 ```
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT012] Commit message contains Claude attribution. Remove Claude attribution from commit message`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT011](GIT011.md) - PR Reference in Commit
