--- a/docs/errors/GIT013.md
+++ b/docs/errors/GIT013.md
@@ -72,6 +72,19 @@ Make scope optional:
 require_scope = false
 ```
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT013] Commit message doesn't follow conventional commits format. Use conventional commit format: type(scope): description`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT004](GIT004.md) - Title issues
