--- a/docs/errors/GIT014.md
+++ b/docs/errors/GIT014.md
@@ -47,6 +47,19 @@ Clear all forbidden patterns:
 forbidden_patterns = []
 ```
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT014] Commit message contains a forbidden pattern (tmp/). Remove forbidden pattern from commit message`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT011](GIT011.md) - PR Reference
