--- a/docs/errors/GIT015.md
+++ b/docs/errors/GIT015.md
@@ -47,6 +47,19 @@ Or disable signoff identity checking:
 expected_signoff = ""
 ```
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT015] Signed-off-by trailer doesn't match expected identity. Use correct signoff identity: git config user.name and user.email`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT001](GIT001.md) - Missing Signoff Flag
