--- a/docs/errors/GIT016.md
+++ b/docs/errors/GIT016.md
@@ -35,6 +35,19 @@ Changes:
 2. Blank line before any list
 3. Consistent list marker (`-`, `*`, or `1.`)
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT016] List items in commit body aren't formatted as valid Markdown. Add empty line before list items in commit body`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT005](GIT005.md) - Commit Message Body Issues
