--- a/docs/errors/GIT017.md
+++ b/docs/errors/GIT017.md
@@ -90,6 +90,19 @@ To allow longer titles for reverts:
 allow_unlimited_revert_title = true
 ```
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT017] PR title or body doesn't follow commit message conventions. Fix PR title/body to follow commit message conventions before merge`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT004](GIT004.md) - Title Issues
