--- a/docs/errors/GIT018.md
+++ b/docs/errors/GIT018.md
@@ -95,6 +95,19 @@ EOF
 )"
 ```
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT018] Merge commit body has no Signed-off-by trailer. Add --body flag with Signed-off-by trailer to gh pr merge command`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT001](GIT001.md) - missing signoff flag
