--- a/docs/errors/SEC001.md
+++ b/docs/errors/SEC001.md
@@ -66,3 +66,16 @@ disabled_patterns = ["generic-secret"]  # High false positive pattern
 
 - [SEC002](SEC002.md) - Hardcoded Password
 - [SEC004](SEC004.md) - Token Detected
+
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[SEC001] Potential secrets detected: API key found in code. Remove API key and use environment variables or secret management.`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
