--- a/docs/errors/SEC002.md
+++ b/docs/errors/SEC002.md
@@ -60,3 +60,16 @@ disabled_patterns = ["generic-password"]
 
 - [SEC001](SEC001.md) -- API key detected
 - [SEC005](SEC005.md) -- Connection string detected
+
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[SEC002] Potential secrets detected: hardcoded password found in code. Remove hardcoded password and use secret management.`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
