--- a/docs/errors/SEC003.md
+++ b/docs/errors/SEC003.md
@@ -64,3 +64,16 @@ git filter-repo --invert-paths --path path/to/private.key
 
 - [SEC001](SEC001.md) - API Key Detected
 - [SEC004](SEC004.md) - Token Detected
+
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[SEC003] Potential secrets detected: private key found in code. Remove private key from code; use secure key storage.`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
