--- a/docs/errors/SEC004.md
+++ b/docs/errors/SEC004.md
@@ -67,3 +67,16 @@ allow_list = [
 
 - [SEC001](SEC001.md) - API key detected
 - [SEC003](SEC003.md) - Private key detected
+
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[SEC004] Potential secrets detected: authentication token found in code. Remove token and use environment variables or secret management.`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
