--- a/docs/errors/SEC005.md
+++ b/docs/errors/SEC005.md
@@ -58,3 +58,16 @@ Use connection pooling (PgBouncer, ProxySQL), rotate database credentials on a s
 
 - [SEC001](SEC001.md) - API key detected
 - [SEC002](SEC002.md) - Hardcoded password detected
+
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[SEC005] Potential secrets detected: database connection string with credentials found. Use environment variables for database connection strings.`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
