--- a/docs/errors/GIT003.md
+++ b/docs/errors/GIT003.md
@@ -47,6 +47,19 @@ Disable this check in `config.toml`:
 check_staging_area = false
 ```
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT003] No files are staged for commit. Stage files first: git add <files> && git commit -sS -m "message"`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT009](GIT009.md) - File does not exist (for git add)
