--- a/docs/errors/GIT007.md
+++ b/docs/errors/GIT007.md
@@ -36,6 +36,19 @@ Pushing to a non-existent remote will fail. klaudiush checks remotes before the 
 | `origin`   | Your fork or primary remote         |
 | `upstream` | The original repository (for forks) |
 
+## Hook output
+
+When this error is triggered, klaudiush writes JSON to stdout:
+
+**permissionDecisionReason** (shown to Claude):
+`[GIT007] Remote "myremote" does not exist in this repository. Specify remote: git push <remote> <branch>`
+
+**systemMessage** (shown to user):
+Formatted error with fix hint and reference URL.
+
+**additionalContext** (behavioral guidance):
+`Automated klaudiush validation check. Fix the reported errors and retry the same command.`
+
 ## Related
 
 - [GIT008](GIT008.md) - Missing branch for push
