docs(readme): use install cmd, fix casing
Replace manual JSON hook config in README with
klaudiush install commands. Fix sentence case in
error doc related links.

Signed-off-by: Bart Smykla <bartek@smykla.com>

--- a/docs/errors/GIT001.md
+++ b/docs/errors/GIT001.md
@@ -51,5 +51,5 @@ Formatted error with fix hint and reference URL.
 
 ## Related
 
-- [GIT002](GIT002.md) - Missing GPG Sign Flag
-- [GIT010](GIT010.md) - Missing Required Flags (combined)
+- [GIT002](GIT002.md) - Missing GPG signing flag
+- [GIT010](GIT010.md) - Missing required flags (combined)
