--- a/docs/errors/GIT003.md
+++ b/docs/errors/GIT003.md
@@ -62,4 +62,4 @@ Formatted error with fix hint and reference URL.
 
 ## Related
 
-- [GIT009](GIT009.md) - File does not exist (for git add)
+- [GIT009](GIT009.md) - file does not exist (for git add)
