--- a/docs/errors/GIT004.md
+++ b/docs/errors/GIT004.md
@@ -60,5 +60,5 @@ Formatted error with fix hint and reference URL.
 
 ## Related
 
-- [GIT005](GIT005.md) - Commit Message Body Issues
-- [GIT013](GIT013.md) - Conventional Commit Format
+- [GIT005](GIT005.md) - Commit message body issues
+- [GIT013](GIT013.md) - Conventional commit format
