--- a/docs/errors/GIT005.md
+++ b/docs/errors/GIT005.md
@@ -61,5 +61,5 @@ Formatted error with fix hint and reference URL.
 
 ## Related
 
-- [GIT004](GIT004.md) - Commit Message Title Issues
-- [GIT016](GIT016.md) - List Format Issues
+- [GIT004](GIT004.md) - Commit message title issues
+- [GIT016](GIT016.md) - List format issues
