--- a/docs/errors/GIT006.md
+++ b/docs/errors/GIT006.md
@@ -57,5 +57,5 @@ Formatted error with fix hint and reference URL.
 
 ## Related
 
-- [GIT013](GIT013.md) - Conventional Commit Format
-- [GIT004](GIT004.md) - Commit Message Title Issues
+- [GIT013](GIT013.md) - Conventional commit format
+- [GIT004](GIT004.md) - Commit message title issues
