--- a/docs/errors/GIT011.md
+++ b/docs/errors/GIT011.md
@@ -48,5 +48,5 @@ Formatted error with fix hint and reference URL.
 
 ## Related
 
-- [GIT012](GIT012.md) - Claude Attribution
-- [GIT014](GIT014.md) - Forbidden Patterns
+- [GIT012](GIT012.md) - Claude attribution
+- [GIT014](GIT014.md) - Forbidden patterns
