--- a/docs/errors/GIT012.md
+++ b/docs/errors/GIT012.md
@@ -46,5 +46,5 @@ Formatted error with fix hint and reference URL.
 
 ## Related
 
-- [GIT011](GIT011.md) - PR Reference in Commit
-- [GIT014](GIT014.md) - Forbidden Patterns
+- [GIT011](GIT011.md) - PR reference in commit
+- [GIT014](GIT014.md) - Forbidden patterns
