--- a/docs/errors/GIT014.md
+++ b/docs/errors/GIT014.md
@@ -62,5 +62,5 @@ Formatted error with fix hint and reference URL.
 
 ## Related
 
-- [GIT011](GIT011.md) - PR Reference
-- [GIT012](GIT012.md) - Claude Attribution
+- [GIT011](GIT011.md) - PR reference
+- [GIT012](GIT012.md) - Claude attribution
