--- a/docs/errors/GIT015.md
+++ b/docs/errors/GIT015.md
@@ -62,5 +62,5 @@ Formatted error with fix hint and reference URL.
 
 ## Related
 
-- [GIT001](GIT001.md) - Missing Signoff Flag
-- [GIT010](GIT010.md) - Missing Required Flags
+- [GIT001](GIT001.md) - Missing signoff flag
+- [GIT010](GIT010.md) - Missing required flags
