--- a/docs/errors/GIT016.md
+++ b/docs/errors/GIT016.md
@@ -50,5 +50,5 @@ Formatted error with fix hint and reference URL.
 
 ## Related
 
-- [GIT005](GIT005.md) - Commit Message Body Issues
-- [GIT004](GIT004.md) - Commit Message Title Issues
+- [GIT005](GIT005.md) - Commit message body issues
+- [GIT004](GIT004.md) - Commit message title issues
