--- a/docs/errors/GIT017.md
+++ b/docs/errors/GIT017.md
@@ -105,8 +105,8 @@ Formatted error with fix hint and reference URL.
 
 ## Related
 
-- [GIT004](GIT004.md) - Title Issues
-- [GIT005](GIT005.md) - Body Issues
-- [GIT006](GIT006.md) - Infrastructure Scope Misuse
-- [GIT013](GIT013.md) - Invalid Conventional Commit Format
-- [GIT018](GIT018.md) - Merge Signoff Missing
+- [GIT004](GIT004.md) - Title issues
+- [GIT005](GIT005.md) - Body issues
+- [GIT006](GIT006.md) - Infrastructure scope misuse
+- [GIT013](GIT013.md) - Invalid conventional commit format
+- [GIT018](GIT018.md) - Merge signoff missing
