--- a/docs/errors/SEC001.md
+++ b/docs/errors/SEC001.md
@@ -64,8 +64,8 @@ disabled_patterns = ["generic-secret"]  # High false positive pattern
 
 ## Related
 
-- [SEC002](SEC002.md) - Hardcoded Password
-- [SEC004](SEC004.md) - Token Detected
+- [SEC002](SEC002.md) - Hardcoded password
+- [SEC004](SEC004.md) - Token detected
 
 ## Hook output
 
