--- a/docs/errors/SEC003.md
+++ b/docs/errors/SEC003.md
@@ -62,8 +62,8 @@ git filter-repo --invert-paths --path path/to/private.key
 
 ## Related
 
-- [SEC001](SEC001.md) - API Key Detected
-- [SEC004](SEC004.md) - Token Detected
+- [SEC001](SEC001.md) - API key detected
+- [SEC004](SEC004.md) - Token detected
 
 ## Hook output
 
